<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <include layout="@layout/base_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/login_ic_accont" />

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_input_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="8dp"
            android:textColorHint="@color/color_cccccc"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_register_phone_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:src="@mipmap/ic_delete"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_eeeeee" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/login_ic_verify" />

        <EditText
            android:id="@+id/et_register_verify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/loign_input_cvode_hint"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="8dp"
            android:textColorHint="@color/color_cccccc"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_verify_note"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/login_obtin_verify_bg_selector"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/login_verification_code"
            android:textColor="@color/color_ffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/login_ic_pwd" />

        <EditText
            android:id="@+id/et_register_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_input_pwd_hint"
            android:maxLength="18"
            android:paddingLeft="8dp"
            android:password="true"
            android:textColorHint="@color/color_cccccc"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cb_register_hide_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_pw_hide_selector"
            android:button="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_eeeeee" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_login_btn_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/color_ffffff"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/tv_register_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tip"
            android:textColor="@color/color_222222"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_register_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_register_tip"
            android:text="@string/register_tip_1"
            android:textColor="@color/color_ff5a89f3"
            android:textSize="10sp" />
    </RelativeLayout>


</LinearLayout>
